[project]
name = "dvd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "controlnet-aux>=0.0.10",
    "cupy-cuda12x>=14.0.1",
    "diffusers>=0.37.0",
    "einops>=0.8.2",
    "ftfy>=6.3.1",
    "h5py>=3.16.0",
    "imageio[ffmpeg]>=2.37.3",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "modelscope>=1.34.0",
    "natsort>=8.4.0",
    "nvidia-ml-py>=13.590.48",
    "omegaconf>=2.3.0",
    "pandas>=3.0.1",
    "peft>=0.18.1",
    "protobuf==3.20.3",
    "safetensors>=0.7.0",
    "sageattention>=1.0.6",
    "sentencepiece>=0.2.1",
    "streamlit>=1.9.0",
    "tabulate>=0.10.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.package-data]
diffsynth = ["tokenizer_configs/**/**/*.*"]

[tool.ruff]
# Global settings go here
line-length = 120
indent-width = 4  # Moved out of [tool.ruff.format]

[tool.ruff.format]
# Formatter-specific settings go here
indent-style = "space"
skip-magic-trailing-comma = true

[tool.ruff.lint]
# Linter-specific settings go here
ignore = ["E501"]
select = ["E", "F", "W"]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
